--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "native-base": "^3.2.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
-    "react-native-check-box": "^2.1.7",
+    "react-native-checkbox-animated": "0.0.10",
+    "react-native-checkbox-reanimated": "^0.1.0",
+    "react-native-paper": "^4.11.1",
+    "react-native-radio-input": "^0.9.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1"
